   * Bug #798342: If memcached server sends unknown flag in response for
   "get", results in:
      "UnboundLocalError: local variable 'val' referenced before assignment"
   Now returns "None" instead.  Patch by Sharoon Thomas

Mon, 20 Dec 2010 19:14:17 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #680359: useOldServerHashFunction() is broken.  It now correctly
     switches back to the old memcache hash function.

Thu, 16 Dec 2010 02:07:40 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #471727: Changed the delete() code to explicitly check for both
     NOT_FOUND and DELETED as the responses and return successful for both.
     It also logs an error if one of these two responses is not found.
     Also added a test to ensure that delete() works.

   * When using set_multi and one value is too big, traceback
     TypeError: 'int' object is unsubscriptable
     Patch by Orjan Persson

   * Fixing Bug #529855: Server host can now be bare host without ":<port>".
     Fix proposed by Roger Binns.

   * Fixing Bug #491164: Typo fix, "compession" -> "compRession".

   * Fixing Bug #509712: "TypeError: 'NoneType' object is unsubscriptable"
     Also fixed some other similar code to not have issues with that.

   * Also related to 509712 and 628339: readline() now returns '' instead
     of None when a server dies.  This should be safer.  Patch suggested by
     Denis Otkidach.

   * Fixing Bug #628339: Read from server sometimes fails.  Patch by Jeremy
     Cowles.

   * Fixing Bug #633553: Add stat arguments support to get_stats().  Patch
     by Ryan Lane.

   * Changing the license to the PSF License.

   * Removing Evan's e-mail address at his request, changing authorship to
     Sean.

Sat, 28 Nov 2009 01:07:42 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.45

   * Per-connection max server key length.  Patch by Nicolas Delaby

   * Patches to make memcached more garbage-collectable.  Removes